fix bug 600140, unread quick filter hides some messages, r=bienvenu